--- a/emnesite.html
+++ b/emnesite.html
@@ -144,15 +144,27 @@
           <img src="img/css_em.webp" alt="CSS struktur" />
         </section>
       </section>
-      <!-- <h3>Præsentation</h3>
-      <p></p> -->
-      <section class="baggrund">
-        <h4>Se det færdige produkt her:</h4>
-        <a
-          href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
-          target="_blank"
-          >Website <i class="arrow"></i
-        ></a>
+      <section class="baggrund1">
+        <div class="grid_1-1">
+          <div>
+            <h4>Se det færdige produkt her:</h4>
+            <a
+              href="https://idaholmterp.dk/kea/03_ux/01_kodet_site/index.html"
+              target="_blank"
+              >Website <i class="arrow"></i
+            ></a>
+          </div>
+          <div>
+            <h4>Nye kompenancer</h4>
+            <ul class="icon">
+              <li>Figma</li>
+              <li>idégenering</li>
+              <li>Design</li>
+              <li>UX</li>
+              <li>UI</li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="grid_1-1-1">
