--- a/website.html
+++ b/website.html
@@ -33,15 +33,13 @@
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <div class="overskrift">
-        <h1>Website</h1>
-      </div>
       <section class="baggrund">
-        <div class="flex">
-          <div class="grid_1-1">
-            <div>
-              <h2>Tema</h2>
-              <!-- <p>
+        <h1>Website</h1>
+        <!-- <div class="flex"> -->
+        <div class="grid_1-1">
+          <div>
+            <h2>Tema</h2>
+            <!-- <p>
                 I dette tema bliv vi introduceret til de grundlæggende og mest
                 anvendte redskaber i en multimediedesigners værktøjskasse. Disse
                 redskaber danner fundamentet for resten af uddannelsen på MMD.
@@ -51,16 +49,16 @@
                 undervist i HTML og CSS, samt grundlæggende færdigheder i
                 grafikopsætning af tekst og billeder i Figma.
               </p> -->
-              <p>
-                I Tema 2 grundlæggende web lærte vi om generel HTML og CSS.
-                Disse færdigheder brugte vi til først at lave mobilsite, for
-                derefter lav en respontiv website som også fungerede som
-                studiestarts prøve. Derudover blev vi introduceret til de
-                grundlæggende færdigheder i grafisk opsætning af tekst og
-                billeder i Figma, som vi brugte i tema 3.
-              </p>
-            </div>
-            <!-- <p>
+            <p>
+              I Tema 2 grundlæggende web lærte vi om generel HTML og CSS. Disse
+              færdigheder brugte vi til først at lave mobilsite, for derefter
+              lav en respontiv website som også fungerede som studiestarts
+              prøve. Derudover blev vi introduceret til de grundlæggende
+              færdigheder i grafisk opsætning af tekst og billeder i Figma, som
+              vi brugte i tema 3.
+            </p>
+          </div>
+          <!-- <p>
               forskellige layoutprincipper: A, B, C (her demonstrerer du viden).
               Jeg valgte at bruge princip B til at løse den efterfølgende opgave
               på følgende måde (her demonstrerer du færdighed). Jeg valgte at
@@ -68,22 +66,22 @@
               demonstrerer du kompetence). I Tema Y (link) brugte jeg også
               layoutprincipper, men jeg gjorde det anderledes.
             </p> -->
-            <div>
-              <h3>Opgave</h3>
-              <p>
-                I website opgaven fik jeg udleveret wireframes, layoutdiagram
-                samt indhold (billede og tekst) til at lave et færdigt
-                responsivt design.
-              </p>
-              <!-- <p>
+          <div>
+            <h3>Opgave</h3>
+            <p>
+              I website opgaven fik jeg udleveret wireframes, layoutdiagram samt
+              indhold (billede og tekst) til at lave et færdigt responsivt
+              design.
+            </p>
+            <!-- <p>
                 I website opgaven lavede jeg et website ud fra udleveret
                 wireframes, layoutsiagrammer samt udleveret indhold (tekst og
                 billede). Dette gjorde jeg ved brug af HTML til at opbygge
                 siden, og CSS til styling og layout.
               </p> -->
-            </div>
           </div>
         </div>
+        <!-- </div> -->
       </section>
       <section class="baggrund1">
         <h4>Metode</h4>
