--- a/emnesite.html
+++ b/emnesite.html
@@ -33,8 +33,8 @@
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <h1>Emnesite</h1>
       <section class="baggrund">
+        <h1>Emnesite</h1>
         <div class="grid_1-1">
           <div>
             <h2>Tema</h2>
@@ -97,52 +97,58 @@
         </div>
       </section>
       <section class="baggrund1">
-        <h3>Research og idé</h3>
-        <p>
-          I starten af processen for emnesitet gik vi igang med idégenering som
-          tog form af en brainstorm for emnet på sitete. Her valgte jeg emnet
-          hækle. Derefter gik vi igang med at udforme ideèn i form af moodboard
-          og stylyetile, for at finde udtrykket for sitet.
-        </p>
-        <div class="grid_1-1">
+        <div class="grid_1-1-1">
           <div>
-            <h4>Moodboard</h4>
-            <img src="img/moodboard.webp" alt="Moodboard" />
+            <h2>Metode</h2>
+            <p>
+              I starten af processen for emnesitet gik vi igang med idégenering
+              som tog form af en brainstorm for emnet på sitete. Her valgte jeg
+              emnet hækle. Derefter gik vi igang med at udforme ideèn i form af
+              moodboard og stylyetile, for at finde udtrykket for sitet.
+            </p>
+            <p>
+              Efter at havde lavet research, lavede jeg en digital klikbar
+              prototype for at se hvordan sitet ville udforme sig. Digital
+              prototype har jeg brugt igen i Tema 5.
+            </p>
           </div>
           <div>
-            <h4>Styletile</h4>
+            <img src="img/moodboard.webp" alt="Moodboard" />
+            <figcaption>Moodboard</figcaption>
+          </div>
+          <div>
             <img src="img/styletile.webp" alt="Styletile" />
+            <figcaption>Styletile</figcaption>
           </div>
         </div>
+        <img src="img/prototype_em.webp" alt="Prototype emnesite" />
       </section>
       <section class="baggrund">
-        <h3>Digital prototype</h3>
-        <p>
-          Efter at havde lavet research, lavede jeg en digital klikbar prototype
-          for at se hvordan sitet ville udforme sig. Digital prototype har jeg
-          brugt igen i Tema 5.
-        </p>
-        <img src="img/prototype_em.webp" alt="Prototype emnesite" />
-        <h3>Kodet site</h3>
-        <p>
-          Udfra min digitale prototype begyndte jeg at kode mit site med html og
-          css. Html for at lave strukturen i sitet og css for at style og lave
-          layout. Ny css jeg lærte i dette tema var at implementere fonte og at
-          lave et dynamisk galleri, hvor billederne blender sammen frem for at
-          blive inde for grid linjerne.
-        </p>
-        <p>
-          I HTML gives sektionen for galleriet klassen 'container' og billederne
-          klassen 'galleri'. I CSS bruges klasserne så ledes 'container' bruges
-          til at definere breden, koloner og kolone mellemrum. 'Galleri' bruges
-          til at definere størrelsen på billederne, mellemrum fra billede til
-          billede og til sidst 'break-inside: avoid;' for at billederne samler
-          sig frem for at ligge på kolone linjerne.
-        </p>
-        <section class="grid_1-1">
-          <img src="img/html_em.webp" alt="HTML struktur" />
-          <img src="img/css_em.webp" alt="CSS struktur" />
-        </section>
+        <div class="grid_1-1">
+          <div>
+            <h3>Kodet site</h3>
+            <p>
+              Udfra min digitale prototype begyndte jeg at kode mit site med
+              html og css. Html for at lave strukturen i sitet og css for at
+              style og lave layout. Ny css jeg lærte i dette tema var at
+              implementere fonte og at lave et dynamisk galleri, hvor billederne
+              blender sammen frem for at blive inde for grid linjerne.
+            </p>
+            <p>
+              I HTML gives sektionen for galleriet klassen 'container' og
+              billederne klassen 'galleri'. I CSS bruges klasserne så ledes
+              'container' bruges til at definere breden, koloner og kolone
+              mellemrum. 'Galleri' bruges til at definere størrelsen på
+              billederne, mellemrum fra billede til billede og til sidst
+              'break-inside: avoid;' for at billederne samler sig frem for at
+              ligge på kolone linjerne.
+            </p>
+          </div>
+          <div>
+            <img src="img/html_em.webp" alt="HTML struktur" />
+            <img src="img/css_em.webp" alt="CSS struktur" />
+          </div>
+        </div>
       </section>
       <section class="baggrund1">
         <div class="grid_1-1">
@@ -158,7 +164,7 @@
             <h4>Nye kompenancer</h4>
             <ul class="icon">
               <li>Figma</li>
-              <li>idégenering</li>
+              <li>Idégenering</li>
               <li>Design</li>
               <li>UX</li>
               <li>UI</li>
