--- a/passion.html
+++ b/passion.html
@@ -33,8 +33,8 @@
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <h1>Passionsite</h1>
       <section class="baggrund">
+        <h1>Passionsite</h1>
         <div class="grid_1-1">
           <div>
             <h2>Tema</h2>
@@ -53,7 +53,25 @@
           </div>
           <div>
             <h3>Opgave</h3>
-            <p>I denne opgave</p>
+            <p>
+              I denne opgave var vores mål at lære at forbedre og filme en video
+              ud fra xxxx metoden, som bruges for at få en mere dynamisk video
+              og spændene video. Deruover skulle vi lære at bruge PrimerePro,
+              After Effect samt LottieFile, som vi brugte i opgave 2 i Tema 5.
+            </p>
+            <!-- <p>
+              I opgave X var vores mål at lave et redesign for en forbedret
+              brugeroplevelse af løsning Y (viden). Min rolle var [indsæt din
+              hovedrolle og ansvarsområder], som jeg udførte [specifik måde med
+              specifikke værktøjer eller metoder] (færdighed). Det lærte mig
+              vigtigheden af [værktøj/metode], som jeg senere brugte i
+              Opgavebeskrivelse Portfolioeksamen Forår 2024 Side 2 af 3
+              [fremtidigt projekt eller videreudvikling]. Udviklingsprocessen
+              kan ses i [illustrationer eller visualiseringer] i figur 1
+              (kompetence). Det sværeste var [svar], som jeg derfor var ekstra
+              opmærksom på at blive bedre til i [øvelse/opgave/projekt] (link)
+              sidst på semesteret.
+            </p> -->
           </div>
         </div>
       </section>
