--- a/website.html
+++ b/website.html
@@ -39,39 +39,22 @@
         <div class="grid_1-1">
           <div>
             <h2>Tema</h2>
-            <!-- <p>
-                I dette tema bliv vi introduceret til de grundlæggende og mest
-                anvendte redskaber i en multimediedesigners værktøjskasse. Disse
-                redskaber danner fundamentet for resten af uddannelsen på MMD.
-                Vi blev introduceres til grundlæggende begreber inden for design
-                af digitale brugergrænseflader, digital indholdsproduktion,
-                digital kommunikation og responsivt webdesign. Der blev
-                undervist i HTML og CSS, samt grundlæggende færdigheder i
-                grafikopsætning af tekst og billeder i Figma.
-              </p> -->
             <p>
               I Tema 2 grundlæggende web lærte vi om generel HTML og CSS. Disse
               færdigheder brugte vi til først at lave mobilsite, for derefter
               lav en respontiv website som også fungerede som studiestarts
               prøve. Derudover blev vi introduceret til de grundlæggende
               færdigheder i grafisk opsætning af tekst og billeder i Figma, som
-              vi brugte i tema 3.
+              vi brugte i Tema 3.
             </p>
           </div>
-          <!-- <p>
-              forskellige layoutprincipper: A, B, C (her demonstrerer du viden).
-              Jeg valgte at bruge princip B til at løse den efterfølgende opgave
-              på følgende måde (her demonstrerer du færdighed). Jeg valgte at
-              bruge det princip til min løsning fremfor A & C, fordi [...] (her
-              demonstrerer du kompetence). I Tema Y (link) brugte jeg også
-              layoutprincipper, men jeg gjorde det anderledes.
-            </p> -->
           <div>
             <h3>Opgave</h3>
             <p>
               I website opgaven fik jeg udleveret wireframes, layoutdiagram samt
               indhold (billede og tekst) til at lave et færdigt responsivt
-              design.
+              design. Denne opgave skulle bruges til at jeg kunne vise at jeg
+              kunne mestre de grundlæggende færdigheder i HTML og CSS.
             </p>
             <!-- <p>
                 I website opgaven lavede jeg et website ud fra udleveret
@@ -84,7 +67,7 @@
         <!-- </div> -->
       </section>
       <section class="baggrund1">
-        <h4>Metode</h4>
+        <h2>Metode</h2>
         <p>
           Jeg opbyggede og stylede websitet med udleveret indhold.
           <!-- I denne opgave blev vi introduceret til HTML og CSS.-->
