Layout og indhold

--- a/ommig.html
+++ b/ommig.html
@@ -33,7 +33,9 @@
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <h1>Om mig</h1>
+      <section class="baggrund">
+        <h1>Om mig</h1>
+      </section>
       <section class="baggrund">
         <div class="grid_1-1">
           <img class="potrat" src="img/potrat.jpeg" alt="Potræt" />
