--- a/passion.html
+++ b/passion.html
@@ -59,6 +59,7 @@
               og spændene video. Deruover skulle vi lære at bruge PrimerePro,
               After Effect samt LottieFile, som vi brugte i opgave 2 i Tema 5.
             </p>
+
             <!-- <p>
               I opgave X var vores mål at lave et redesign for en forbedret
               brugeroplevelse af løsning Y (viden). Min rolle var [indsæt din
@@ -76,28 +77,30 @@
         </div>
       </section>
       <section class="baggrund1">
-        <h4>Metode</h4>
-        <p>
-          Jeg startede processen med at lave et xxxxx for at finde ud af hvilke
-          skud jeg skulle have, da jeg skulle ud og filme. Da jeg havde været ud
-          og filme, begyndt jeg at at klippe i Primerie pro?????. Som vi blev
-          introduceret til med nogle små klippe opgaver.
-        </p>
-        <p>
-          Efter at havde klippet videoen, ud fra de krav der var givet af
-          lærene. Satte jeg websitet op ud fra det wireframe som også var givet,
-          her implementeret jeg videoen både dirkete på sitet med HTML og som
-          video fra Youtube. Derudover skulle jeg lave en LottieFile som en
-          herosection. Lottiefile er lavet i Aftereffect og oploadet på
-          Lottiefile og implementeret på siden den vej igennem, dette gør at
-          filen ikke fulder nær så meget som hvis det var en video.
-        </p>
+        <div class="grid_1-1">
+          <div>
+            <h4>Metode</h4>
+            <p>
+              Jeg startede processen med at lave et xxxxx for at finde ud af
+              hvilke frames jeg skulle have, da jeg skulle ud og filme. Da jeg
+              havde været ud og filme, begyndt jeg at at klippe i Primerie
+              pro?????. Som vi blev introduceret til med nogle små klippe
+              opgaver.
+            </p>
+            <p>
+              Efter at havde klippet videoen, ud fra de krav der var givet af
+              lærene. Satte jeg websitet op ud fra det wireframe som var
+              udleveret af lærene her implementeret jeg videoen både dirkete på
+              sitet med HTML og som video fra Youtube. Derudover skulle jeg lave
+              en LottieFile som en herosection. Lottiefile er lavet i
+              Aftereffect og oploadet på Lottiefile og implementeret på siden
+              den vej igennem, dette gør at filen ikke fylder lige så meget som
+              hvis det var en video.
+            </p>
+          </div>
+          <img src="img/video.webp" alt="Frames" />
+        </div>
       </section>
-      <!-- <h4>Forbereding til opgavelse</h4>
-      <h4>Optagelse</h4>
-      <h4>Video</h4>
-      <h4>Billeder</h4>
-      <h4>Hero section</h4> -->
       <section class="baggrund">
         <div class="grid_1-1">
           <div>
