--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/layout.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/java.js"></script>
-    <title>virksomhedsite</title>
+    <title>Virksomhedsite</title>
   </head>
   <body>
     <header class="grid_1-1-1">
@@ -34,8 +34,8 @@
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <h1>virksomhedsite</h1>
       <section class="baggrund">
+        <h1>Virksomhedsite</h1>
         <div class="grid_1-1">
           <div>
             <h2>Tema</h2>
@@ -58,7 +58,9 @@
               I denne opgave skulle vi prøve kræfter med at redesigne en
               selvvalgt virksomheds website. Redesignet skulle munde ud i et
               kodet website og indeholde indholdsproduktioner i form af fx
-              tekst, foto, LottieFiles og video. Dette var et gruppeprojekt.
+              tekst, foto, LottieFiles og video. Dette var et gruppeprojekt. Vi
+              var alle indover alle dele af opgaven, men jeg stod for kodningen
+              af indec.html og en del illutations arbejde i Illustrator.
             </p>
           </div>
         </div>
@@ -83,13 +85,24 @@
         </div>
       </section>
       <section class="baggrund">
-        <h4>Se det færdige produkt her:</h4>
-        <a
-          class="website"
-          href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
-          target="_blank"
-          >Website <i class="arrow"></i
-        ></a>
+        <div class="grid_1-1">
+          <div>
+            <h4>Se det færdige produkt her:</h4>
+            <a
+              class="website"
+              href="https://idaholmterp.dk/kea/05_indhold/virksomhedsite/index.html"
+              target="_blank"
+              >Website <i class="arrow"></i
+            ></a>
+          </div>
+          <div>
+            <h4>Nye kompenancer</h4>
+            <ul class="icon">
+              <li>Gruppearbejde</li>
+              <li>Redesign</li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="grid_1-1-1">
