--- a/spil.html
+++ b/spil.html
@@ -33,8 +33,8 @@
       <a class="ommig" href="ommig.html">Om mig</a>
     </header>
     <main>
-      <h1>Spil</h1>
       <section class="baggrund">
+        <h1>Spil</h1>
         <div class="grid_1-1">
           <div>
             <h2>Tema</h2>
@@ -57,10 +57,24 @@
           <div>
             <h3>Opgave</h3>
             <p>
-              Spillet skal have et koncept og en idé, som du selv finder frem
-              til, og du skal designe alle elementer og kode spillet helt fra
-              bunden.
+              I denne opgave skulle vi lave et spil som skulle have et koncept
+              og en idé, som vi selv fandt frem til, og selv skulle designe alle
+              elementer og kode spillet helt fra bunden. Dette skulle gøre ved
+              brug af CSS-animation og JavaScript.
             </p>
+            <!-- <p>
+              I opgave X var vores mål at lave et redesign for en forbedret
+              brugeroplevelse af løsning Y (viden). Min rolle var [indsæt din
+              hovedrolle og ansvarsområder], som jeg udførte [specifik måde med
+              specifikke værktøjer eller metoder] (færdighed). Det lærte mig
+              vigtigheden af [værktøj/metode], som jeg senere brugte i
+              Opgavebeskrivelse Portfolioeksamen Forår 2024 Side 2 af 3
+              [fremtidigt projekt eller videreudvikling]. Udviklingsprocessen
+              kan ses i [illustrationer eller visualiseringer] i figur 1
+              (kompetence). Det sværeste var [svar], som jeg derfor var ekstra
+              opmærksom på at blive bedre til i [øvelse/opgave/projekt] (link)
+              sidst på semesteret.
+            </p> -->
           </div>
         </div>
       </section>
