--- a/spil.html
+++ b/spil.html
@@ -89,23 +89,28 @@
             spil med køer og alien, som også referere til en del af vores
             popkultur.
           </p>
-          <div class="grid_1-1-1">
-            <div>
-              <!-- <h4>Kodet spil</h4> -->
-              <p>
-                Efter at havde fundet en idé til spillet med gode og dårlige
-                elementer, lavede jeg aktivitetdiagram og state machine-diagram
-                for mit spil. Diagrammerne er med til at hjælpe når spillet skal
-                kodes, så prograrømren ved hvad de forskellige elementer skal og
-                dermed hvordan det skal bygges op i HTML, CSS og JavaScript.
-              </p>
-            </div>
-            <img src="img/aktivitetdiagram.webp" alt="aktivitetdiagram" />
-            <img
-              src="img/statemachinediagram.webp"
-              alt="statemachine-diagrammer"
-            />
+          <!-- <div class="grid_1-1"> -->
+          <div>
+            <!-- <h4>Kodet spil</h4> -->
+            <p>
+              Efter at havde fundet en idé til spillet med gode og dårlige
+              elementer, lavede jeg aktivitetdiagram og state machine-diagram
+              for mit spil. Diagrammerne er med til at hjælpe når spillet skal
+              kodes, så prograrømren ved hvad de forskellige elementer skal og
+              dermed hvordan det skal bygges op i HTML, CSS og JavaScript.
+            </p>
           </div>
+          <div class="grid_1-1">
+            <!-- <img src="img/aktivitetdiagram.webp" alt="aktivitetdiagram" /> -->
+            <div>
+              <img
+                src="img/statemachinediagram.webp"
+                alt="statemachine-diagrammer"
+              />
+              <figcaption>State machine-diagram</figcaption>
+            </div>
+          </div>
+          <!-- </div> -->
         </div>
         <div>
           <h4>Kode</h4>
