--- a/emnesite.html
+++ b/emnesite.html
@@ -97,7 +97,7 @@
         </div>
       </section>
       <section class="baggrund1">
-        <div class="grid_1-1-1">
+        <div class="grid_1-1">
           <div>
             <h2>Metode</h2>
             <p>
@@ -112,10 +112,10 @@
               prototype har jeg brugt igen i Tema 5.
             </p>
           </div>
-          <div>
+          <!-- <div>
             <img src="img/moodboard.webp" alt="Moodboard" />
             <figcaption>Moodboard</figcaption>
-          </div>
+          </div> -->
           <div>
             <img src="img/styletile.webp" alt="Styletile" />
             <figcaption>Styletile</figcaption>
@@ -123,7 +123,7 @@
         </div>
         <img src="img/prototype_em.webp" alt="Prototype emnesite" />
       </section>
-      <section class="baggrund">
+      <section class="baggrund1">
         <div class="grid_1-1">
           <div>
             <h3>Kodet site</h3>
@@ -150,7 +150,7 @@
           </div>
         </div>
       </section>
-      <section class="baggrund1">
+      <section class="baggrund">
         <div class="grid_1-1">
           <div>
             <h4>Se det færdige produkt her:</h4>
