--- a/virksomhedsite.html
+++ b/virksomhedsite.html
@@ -68,20 +68,26 @@
       <section class="baggrund1">
         <div>
           <div>
-            <h3>Metode</h3>
-            <p>
-              Ud fra vores valgte website Klodshans, begynde vi at idéudvikle på
-              hvordan design af hjemmesiden skulle se ud. I denne del af
-              processen lavede vi moodboards og styletile. Samt research på
-              andre baby udstyrs websites, der er i branchen.
-            </p>
-            <p>
-              For at vise virksomheden bedste frem tog vi ud til Virksomheden og
-              optog video og tog billeder til sitet. Derudover brugte vi tekst
-              og billeder, der allerede var på sitet, samt vektorgrafik som vi
-              tegnede i Illustator.
-            </p>
-            <p></p>
+            <div>
+              <h3>Metode</h3>
+              <p>
+                Ud fra vores valgte website Klodshans, begynde vi at idéudvikle
+                på hvordan design af hjemmesiden skulle se ud. I denne del af
+                processen lavede vi moodboards og styletile. Samt research på
+                andre baby udstyrs websites, der er i branchen.
+              </p>
+              <p>
+                For at vise virksomheden bedste frem tog vi ud til Virksomheden
+                og optog video og tog billeder til sitet. Derudover brugte vi
+                tekst og billeder, der allerede var på sitet, samt vektorgrafik
+                som vi tegnede i Illustator.
+              </p>
+              <p></p>
+            </div>
+            <div>
+              <img src="" alt="" />
+              <img src="" alt="" />
+            </div>
           </div>
         </div>
       </section>
